crates/weft-snapshots/tests/snapshots/html/example-segmented-control.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-segmented-control as html
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Calendar</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="root" aria-label="Calendar">
  <div data-weft-id="view" aria-label="View" role="radiogroup" data-weft-segmented data-bind="value:$.view" data-action="change:calendar.update">
    <span aria-hidden="true">View</span><label><input data-weft-id="view-day" type="radio" name="weft-view" value="day" aria-label="Day"><span aria-hidden="true">Day</span></label><label><input data-weft-id="view-week" type="radio" name="weft-view" value="week" aria-label="Week"><span aria-hidden="true">Week</span></label><label><input data-weft-id="view-month" type="radio" name="weft-view" value="month" aria-label="Month"><span aria-hidden="true">Month</span></label>
  </div>
</main>
</body>
</html>
